--- a/package.json
+++ b/package.json
@@ -11,9 +11,18 @@
   },
   "dependencies": {
     "@clerk/clerk-react": "^5.49.0",
+    "@tanstack/react-query": "^5.90.2",
+    "@tanstack/react-router": "^1.132.31",
+    "axios": "^1.12.2",
     "react": "19.0.0-rc-8b08e99e-20240713",
     "react-dom": "19.0.0-rc-8b08e99e-20240713",
-    "react-router-dom": "^7.9.3"
+    "react-markdown": "^10.1.0",
+    "react-router-dom": "^7.9.3",
+    "react-syntax-highlighter": "^15.6.6",
+    "remark-gfm": "^4.0.1",
+    "ts-json-api": "^1.2.0",
+    "ts-jsonapi": "^2.1.3",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
