--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@clerk/clerk-react": "^5.49.0",
     "@tanstack/react-query": "^5.90.2",
+    "@tanstack/react-query-devtools": "^5.90.2",
     "@tanstack/react-router": "^1.132.31",
     "axios": "^1.12.2",
     "react": "19.0.0-rc-8b08e99e-20240713",
@@ -19,6 +20,7 @@
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.9.3",
     "react-syntax-highlighter": "^15.6.6",
+    "rehype-highlight": "^7.0.2",
     "remark-gfm": "^4.0.1",
     "ts-json-api": "^1.2.0",
     "ts-jsonapi": "^2.1.3",
