--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,12 +5,5 @@ services:
     ports:
       - "3000:80"
     restart: unless-stopped
-    container_name: chatgpt-clone-frontend
-# Tambahkan service backend di bawah ini jika ada backend sendiri
-#  backend:
-#    build: ./backend
-#    ports:
-#      - "5000:5000"
-#    environment:
-#      - NODE_ENV=production
-#    restart: unless-stopped
+    container_name: cuekin-web
+
