--- a/nginx.conf
+++ b/nginx.conf
@@ -1,10 +1,20 @@
 server {
     listen 80;
     server_name _;
+
     root /usr/share/nginx/html;
     index index.html;
 
     location / {
-        try_files $uri $uri/ /index.html;
+        # Kirim semua request ke index.html agar React Router menangani routing
+        try_files $uri /index.html;
     }
+
+    # Optional: cache static assets
+    location ~* \.(?:ico|css|js|gif|jpe?g|png|woff2?|eot|ttf|svg|mp4|webm)$ {
+        expires 1M;
+        add_header Cache-Control "public";
+    }
+
+    error_page 404 /index.html;
 }
